namespace AirTrafficMonitor.Observer
{
    public interface IFlightObserver
    {
    }
}